--- a/src/components/Edit.css
+++ b/src/components/Edit.css
@@ -7,9 +7,32 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-background-color: transparent;
+    background-color: rgba(0, 0,0,0.6);
+    width: 100%;
+    height: 100%;
+    border: 1px solid;
 }
-.edit-part+div {
-    display: none;
-    /* Hide the following div */
+
+.edit-part input {
+    padding: 10px;
+    margin-bottom: 23px;
+    width: 15%;
+    height: 4%;
+    font-size: 20px;
+}
+
+.edit-part textarea {
+    padding: 10px;
+    margin-bottom: 23px;
+    width: 16%;
+    height: 10%;
+    font-size: 25px;
+}
+
+.edit-part button{
+    margin: 5px;
+    padding: 5px;
+    background-color: silver;
+    border-radius: 3px;
+    font-size: 20px;
 }
